# vidanueva

./: CMakeLists.txt  README.md  debug.sh  main.cpp  mapTables.hpp  on-file-change.sh  postgres.hpp  run.sh  todo.txt  work-live.sh
app/: App.cpp  App.hpp  AuthServices.cpp  AuthServices.hpp  CMakeLists.txt  MainPage.cpp  MainPage.hpp  User.hpp
app-root/: app.xml  config.xml
app-root/page/: edit.xml  view.xml
auth/: AppExtension.cpp  AppExtension.hpp  CMakeLists.txt
doc-root/css/: colour.css  fonts.css  layout.css
lib/: CMakeLists.txt
lib/page/: edit.cpp  edit.hpp  model.hpp  view.hpp
vidanueva/: CMakeLists.txt  mapTables.hpp
vidanueva/app/: App.cpp  CMakeLists.txt
vidanueva/auth/: AppExtension.hpp  User.hpp
vidanueva/lib/: CMakeLists.txt
vidanueva/lib/page/: CMakeLists.txt  edit.cpp  edit.hpp  model.hpp  view.hpp
